Fixed alignments

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,6 @@ span {
 
 div{
   width: 100%;
-  overflow: hidden;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
